# geocoder

./: .gitignore  README.org  functional_check.R  gc.py  geocode_original.py  geocoder_new.py  kilcanway_nonfull.pkl  load_into_sqlite.py  pyproject.toml  refactoring_gecoding.html  refactoring_gecoding.org
geocode/: geocode_funcs.py  join.py  osm.py  sql.py
geocode/tests/: test_google.py  test_nominatim.py
geocoder/: geocode_funcs.py  join.py  osm.py  sql.py
geocoder/tests/: test_google.py  test_nominatim.py
